除了错误，回滚试试

--- a/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
+++ b/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
@@ -27,21 +27,28 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
 
-
-        settings.Columns.Add("Title");
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Title";
+            c.EditorProperties().Memo(m => {
+                m.Rows = 6;
+                
+            });
+        });
+       
         settings.Columns.Add("MaxScore");
         settings.Columns.Add(c=> {
             c.FieldName = "EventId";
-            
+
             c.Caption = "ÏîÄ¿";
             c.EditorProperties().ComboBox(p =>
             {
                 p.TextField = "Name";
-                p.ValueField = "Id";             
+                p.ValueField = "Id";
                 p.DataSource = ViewBag.EventIds;
             });
         });
-       
+
     });
     if (ViewData["EditError"] != null){
         grid.SetEditErrorText((string)ViewData["EditError"]);
