评分标准批量导入

--- a/Competition.Web/Views/EventCriterias/Index.cshtml
+++ b/Competition.Web/Views/EventCriterias/Index.cshtml
@@ -6,6 +6,7 @@
 
 
 @Html.Action("EventCriteriasGridViewPartial")
+@Html.ActionLink("批量录入", "Multi")
 <script>
     SetLeftNarBarItemSelect("eventSetting", "eventcriterias");
 </script>
