--- a/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
@@ -182,5 +182,6 @@
 
 }
 <script>
-    watermark("@User.Identity.Name")
+    watermark("@Model.Score.Judge.StaffId\n @Model.Score.Judge.Name")
+    //watermark("@User.Identity.Name")
 </script>
