--- a/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
+++ b/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
@@ -35,7 +35,7 @@
                 
             });
         });
-       
+        settings.Columns.Add("MinScore");
         settings.Columns.Add("MaxScore");
         settings.Columns.Add(c=> {
             c.FieldName = "EventId";
