--- a/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
+++ b/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
@@ -48,6 +48,7 @@
         settings.Columns.Add("Pro");
         settings.Columns.Add("MenuOrder");
         settings.Columns.Add("TimeLimit");
+        settings.Columns.Add("Amount");
         //settings.Columns.Add("ChipId");
     });
     if (ViewData["EditError"] != null){
