重新修改初始化程序

--- a/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
@@ -61,7 +61,7 @@
             <div class="col-md-1">
                 <div class="m-auto">耗费时间</div>
             </div>
-
+            <input type="number">
             <div class="col-md-3">
                 @Html.DevExpress().SpinEditFor(m => m.Score.TimeConsume_minute, s =>
            {
