--- a/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
@@ -63,29 +63,58 @@
             <div class="col-md-1">
                 <div class="m-auto">耗费时间</div>
             </div>
-            <input type="number" pattern="^[0-9]+\.{0,1}[0-9]{0,2}$" max="9" min="0">
-            <div class="col-md-3">
-                @Html.DevExpress().SpinEditFor(m => m.Score.TimeConsume_minute, s =>
-           {
+           @* <input type="number" pattern="^[0-9]+\.{0,1}[0-9]{0,2}$" max="9" min="0">*@
+            <div class="col-3">
+                @Html.DevExpress().ComboBoxFor(m => m.Score.TimeConsume_minute, s =>
+                {
+               s.Properties.Caption = "分";             
+               s.Properties.ValueType = typeof(int);
+               for (int i = 0; i <= Model.Score.Schedule.Event.TimeLimit.Minutes; i++)
+               {
+                  s.Properties.Items.Add(i.ToString(), i);
+               }
 
-               s.Properties.Caption = "分";
-               s.Properties.NumberType = SpinEditNumberType.Integer;
-               s.Properties.MinValue = 0;
-               s.Properties.MaxValue = Model.Score.Schedule.Event.TimeLimit.Minutes;
 
            }).GetHtml()
-            </div>
-            <div class="col-md-3">
 
-                @Html.DevExpress().SpinEditFor(m => m.Score.TimeConsume_second, s =>
-                    {
-                    s.Properties.Caption = "秒";
-                    s.Properties.NumberType = SpinEditNumberType.Integer;
-                    s.Properties.MinValue = 0;
-                    s.Properties.MaxValue = 59;
-
-                    }).GetHtml()
             </div>
+            <div class="col-3">
+                @Html.DevExpress().ComboBoxFor(m => m.Score.TimeConsume_second, s =>
+                {
+               s.Properties.Caption = "秒";              
+               s.Properties.ValueType = typeof(int);
+               for (int i = 0; i < 60; i++)
+               {
+                  s.Properties.Items.Add(i.ToString(), i);
+               }
+
+
+           }).GetHtml()
+
+            </div>
+            @*<div class="col-md-3">
+            @Html.DevExpress().SpinEditFor(m => m.Score.TimeConsume_minute, s =>
+        {
+
+            s.Properties.Caption = "分";
+            s.Properties.NumberType = SpinEditNumberType.Integer;
+            s.Properties.MinValue = 0;
+            s.Properties.MaxValue = Model.Score.Schedule.Event.TimeLimit.Minutes;
+
+
+        }).GetHtml()
+        </div>*@
+            @*<div class="col-md-3">
+
+            @Html.DevExpress().SpinEditFor(m => m.Score.TimeConsume_second, s =>
+                {
+                s.Properties.Caption = "秒";
+                s.Properties.NumberType = SpinEditNumberType.Integer;
+                s.Properties.MinValue = 0;
+                s.Properties.MaxValue = 59;
+
+                }).GetHtml()
+        </div>*@
         </div>
         <div class="row"><p> </p></div>
         <table class="table table-striped table-bordered">
@@ -129,6 +158,12 @@
                        s.Properties.MinValue = Model.ScoreDetails[i].EventCriteria.MinScore;
                        s.Properties.MaxValue = Model.ScoreDetails[i].EventCriteria.MaxScore;
                        s.Properties.Height = Unit.Pixel(10);
+                       s.Properties.NumberType = SpinEditNumberType.Float;
+                       s.Properties.SpinButtons.ShowLargeIncrementButtons = true;
+                       s.Properties.Increment = 0.5M;
+                       s.Properties.LargeIncrement = 1;
+                       
+                       
 
                    }).GetHtml()
                         @* @Html.TextBoxFor(d => d.ScoreDetails[i].Mark)*@
